[tool.poetry]
name = "code-checker"
version = "0.1.0"
description = ""
authors = ["umezaki <umezaki@fullmarks.co.jp>"]
readme = "README.md"
packages = [{include = "code_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.18.5"


[tool.poetry.scripts]
code-checker = 'code_checker.python_code_checker:main'
batch-yaml-checker = 'code_checker.batch_yaml_checker:main'


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ["py310"]


[tool.flake8]
max-line-length = 120
max-complexity = 18